# baldr

./: .gitignore  Cargo.toml  README.md
examples/basic_window/: Cargo.toml
examples/basic_window/src/: main.rs
src/: lib.rs
src/platform/: appkit.rs  gtk.rs  mod.rs  win32.rs
src/platform/linux/: gtk.rs  mod.rs
src/platform/linux/widgets/: appbar.rs  button.rs  mod.rs  scaffold.rs  text.rs  window.rs
src/platform/macos/: appkit.rs  mod.rs
src/platform/macos/widgets/: appbar.rs  button.rs  mod.rs  scaffold.rs  text.rs  window.rs
src/platform/windows/: mod.rs  win32.rs  xaml.rs
src/platform/windows/widgets/: button.rs  text.rs
src/widgets/: appbar.rs  button.rs  container.rs  header_bar.rs  mod.rs  scaffold.rs  text.rs  widget.rs  window.rs
