[package]
name = "baldr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
detect-desktop-environment = "0.2.0"
anyhow = "1.0.52"
[target.'cfg(target_os = "macos")'.dependencies]
cacao = "0.2.1"
[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = "0.3.1"
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.29"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.windows]


[[example]]
name = "basic_window"
crate-type = ["bin"]
path = "examples/basic_window/src/main.rs"